<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/gradient2"
    tools:context=".LoginActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="127dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/nutrit_logo2"/>
    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:paddingLeft="2dp"
        android:background="#fff"
        android:autofillHints="Username"
        android:hint="@string/username"
        android:drawableLeft="@drawable/ic_person_black_24dp"
        android:inputType="text" />

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:paddingLeft="3dp"
        android:background="#fff"
        android:autofillHints="Username"
        android:hint="@string/password"
        android:drawableLeft="@drawable/password_logo"
        android:inputType="text" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#34467A"
        android:text="@string/login"
        android:textColor="#fff"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textColor="#fff"
            android:text="@string/not_registered" />

        <TextView
            android:id="@+id/textview_register"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:text="@string/register"
            android:textColor="#FF34467A"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>